# render-engine-aggregators

./: LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: test.yml
src/render_engine_aggregators/: feed.py
tests/: conftest.py  test.py
